WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224573
Null pointer dereference on MediaStreamAudioSourceNode destructor
https://bugs.webkit.org/show_bug.cgi?id=224573
Summary
Null pointer dereference on MediaStreamAudioSourceNode destructor
Ian Gilbert
Reported
2021-04-14 12:50:55 PDT
Null pointer dereference on MediaStreamAudioSourceNode destructor
Attachments
Patch
(3.87 KB, patch)
2021-04-14 13:10 PDT
,
Ian Gilbert
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ian Gilbert
Comment 1
2021-04-14 13:10:22 PDT
Created
attachment 426038
[details]
Patch
Ian Gilbert
Comment 2
2021-04-15 13:02:25 PDT
<
rdar://problem/76276055
>
EWS
Comment 3
2021-04-15 15:40:47 PDT
Committed
r276079
(
236592@main
): <
https://commits.webkit.org/236592@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 426038
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug