Null pointer dereference on MediaStreamAudioSourceNode destructor https://bugs.webkit.org/show_bug.cgi?id=224573

Patch by Ian Gilbert <iang@apple.com> on 2021-04-15
Reviewed by Eric Carlson.

Source/WebCore:

Add null pointer check in case the capture source no longer exists.

Test: webaudio/destroy-audio-source-node-with-no-track-crash.html

* platform/mediastream/mac/MediaStreamTrackAudioSourceProviderCocoa.cpp:
(WebCore::MediaStreamTrackAudioSourceProviderCocoa::hasNewClient):

LayoutTests:

Add regression test.

* webaudio/destroy-audio-source-node-with-no-track-crash-expected.txt: Added.
* webaudio/destroy-audio-source-node-with-no-track-crash.html: Added.

Canonical link: https://commits.webkit.org/236592@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276079 268f45cc-cd09-0410-ab3c-d52691b4dbfc